# hoperator

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cabal.project.freeze  fourmolu.yaml  hoperator.cabal
examples/: ListJobsExample.hs  ListJobsStreamExample.hs  ListThenWatchJobsExample.hs  Watch.hs  WatchJobsExample.hs
src/: Hoperator.hs
src/Hoperator/: Core.hs  Watcher.hs
src/Hoperator/Core/: Cache.hs
tests/: Main.hs
tests/HoperatorTests/: Core.hs  Watcher.hs
