cabal-version:      2.4
name:               hoperator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A small framework for Kubernetes operators

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Guillaume Bogard
maintainer:         hey@guillaumebogard.dev
category: Web
extra-source-files: 
  CHANGELOG.md
  README.md

common common-dependencies
    build-depends:
        aeson >=1.0 && <2.0,
        base,
        bytestring,
        hashable,
        haskell-kubernetes,
        hoauth2 ==1.16.2,
        kubernetes-client==0.4.2.0,
        kubernetes-client-core==0.4.2.0,
        mtl,
        streaming,
        streaming-bytestring,
        text,
        text-ansi,
        time,
        transformers,
        transformers-base,
        unliftio-core,
        unordered-containers >= 0.2,
        http-client
        
common common-rts-options
  ghc-options: -threaded "-with-rtsopts=-N -T"

common common-extensions
  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
    import:          common-dependencies
    import:          common-extensions
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:
        Hoperator,
        Hoperator.Core,
        Hoperator.Core.Cache,
        Hoperator.Watcher

test-suite tests
    import: common-dependencies
    import: common-extensions
    import: common-rts-options
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: tests

executable example-list-jobs
  import: common-dependencies
  import: common-extensions
  import: common-rts-options
  build-depends:
    aeson-pretty,
    bytestring,
    hoperator
  main-is:        ListJobsExample.hs
  hs-source-dirs: examples

executable example-list-jobs-stream
  import: common-dependencies
  import: common-extensions
  import: common-rts-options
  build-depends:
    bytestring,
    hoperator
  main-is:        ListJobsStreamExample.hs
  hs-source-dirs: examples

executable example-watch-jobs
  import: common-dependencies
  import: common-extensions
  import: common-rts-options
  build-depends:
    hoperator
  main-is:        WatchJobsExample.hs
  hs-source-dirs: examples

executable example-list-then-watch-jobs
  import: common-dependencies
  import: common-extensions
  import: common-rts-options
  build-depends:
    hoperator
  main-is:        ListThenWatchJobsExample.hs
  hs-source-dirs: examples